--- a/app/Resources/views/user/userFrontEnd.html.twig
+++ b/app/Resources/views/user/userFrontEnd.html.twig
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/jquery.tablesorter.pager.min.css') }}" />
 
     <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.widgets.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js') }}"></script>
 
@@ -45,8 +44,8 @@
                         <th>Email</th>
                         <th>Prénom</th>
                         <th>Nom</th>
-                        <th>Institut</th>
-                        <th>Activé</th>
+                        <th class="filter-select">Institut</th>
+                        <th class="filter-select">Activé</th>
                     </tr>
                     </thead>
                     <tbody>
