--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -150,10 +150,31 @@
                             <a href="#" data-userId="{{ app.user.id }}">{{ app.user.firstname }} {{ app.user.lastname }}</a>
                             <ul class="sub-menu" style="margin-left: -30px;">
                                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                    <li>
+                                        <a href="#">Gestion</a>
+                                        <ul class="sub-menu" style="margin-left: -400px;">
+                                            <li>
+                                                <a href="#">Des cohortes</a>
+                                                <ul class="sub-menu" style="margin-left: -400px;">
+                                                    {{ render(controller(
+                                                    'AppBundle:Users:allCohortes'
+                                                    )) }}
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <a href="#">Des sessions</a>
+                                                <ul class="sub-menu" style="margin-left: -400px;">
+                                                    {{ render(controller(
+                                                    'AppBundle:Users:allSessions'
+                                                    )) }}
+                                                </ul>
+                                            </li>
+                                            <li><a href="{{ path('usersManag') }}">Des utilisateurs</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a target="_blank" href="{{ path('sonata_admin_dashboard') }}">BackOffice</a></li>
                                     <li><a href="{{ path('emailing') }}">Emailing</a></li>
                                     <li><a href="{{ path('stats') }}">Statistiques</a></li>
-                                    <li><a href="{{ path('usersManag') }}">Gestion des utilisateurs</a></li>
                                 {% endif %}
                                 {% block vueAdmin %}{% endblock %}
                                 <li><a href="{{ path('calendrier') }}">Mon calendrier</a></li>
