Maintenance devoirs OK

--- a/app/Resources/views/user/one.html.twig
+++ b/app/Resources/views/user/one.html.twig
@@ -204,6 +204,10 @@
             }else if(getUrlParameter("cours")){
                 $('a[aria-controls=t1body2]').click();
             }
+
+            if($('#form_created_at').val() == '01/12/0002'){
+                $('#form_created_at').val('Avant le 27/07/2018');
+            }
         });
     </script>
 
